member pages are all aligned and correctly linked

--- a/CSS/Nabil.sass
+++ b/CSS/Nabil.sass
@@ -1,5 +1,5 @@
 /*nabil css*/
-@import "style" 
+@import style 
 #member-content
 	display: flex
 	width: 75%
@@ -64,4 +64,33 @@ div>p:last-child
 
 	100%
 		transform: translate(1px, -2px) rotate(-1deg)
+
+
+@media only screen and (max-width: 678px)
+	h3
+		margin-top: -20px
+		font-size: 20px
+
+	#member-content
+		display: block
+		width: 75%
+		max-width: 800px
+		margin: 0 auto
+		margin-top: 40px
+		h2
+			text-align: center
+
+	.member-pic
+		width: 100%
+		text-align: center
+		padding-left: 0
+		padding-right: 0
+
+
+	.member-disc
+		flex-direction: row
+		flex-wrap: wrap
+		width: 100%
+		padding-left: 0
+		padding-right: 0
 
